# sudoku-engine

./: .clang-format  .gitignore  CMakeLists.txt  README.md  app.js  index.html  package-lock.json  styles.css  sudoku.js
.github/: copilot-instructions.md
data/: killer_pack.py
data/puzzles/: cage-le-2.ks  cage-le-3.ks  cage-le-4.ks  cage-le-5.ks  cage-le-6.ks  cage-le-7.ks  cage-le-8.ks  cage-le-9.ks
data/results/backtrack/: backtrack_summary.xlsx  experiment-data-backtrack-2.csv  experiment-data-backtrack-3.csv  experiment-data-backtrack-4.csv  experiment-data-backtrack-5.csv  experiment-data-backtrack-6.csv  experiment-data-backtrack-7.csv  experiment-data-backtrack-8.csv  experiment-data-backtrack-9.csv
data/results/forward/: experiment-data-forward-2.csv  (+8 more)
data/results/forward-lcv/: experiment-data-forward-lcv-2(laptop).csv  experiment-data-forward-lcv-2.csv  experiment-data-forward-lcv-3.csv  experiment-data-forward-lcv-4.csv  experiment-data-forward-lcv-5(laptop).csv  experiment-data-forward-lcv-5-part.csv  experiment-data-forward-lcv-6-part.csv  experiment-data-forward-lcv-7-part.csv  experiment-data-forward-lcv-8-part.csv  experiment-data-forward-lcv-9-part.csv  forward_lcv_summary.xlsx
data/results/forward-mrv/: experiment-data-forward-mrv-2.csv  experiment-data-forward-mrv-3.csv  experiment-data-forward-mrv-4.csv  experiment-data-forward-mrv-5.csv  experiment-data-forward-mrv-6-part.csv  experiment-data-forward-mrv-7-part.csv  experiment-data-forward-mrv-8-part.csv  experiment-data-forward-mrv-9-part.csv
data/results/forward-mrv-lcv/: experiment-data-forward-mrv-lcv-2.csv  experiment-data-forward-mrv-lcv-3.csv  experiment-data-forward-mrv-lcv-4.csv  experiment-data-forward-mrv-lcv-5-part.csv  experiment-data-forward-mrv-lcv-6-part.csv  experiment-data-forward-mrv-lcv-7-part.csv  experiment-data-forward-mrv-lcv-8-part.csv  experiment-data-forward-mrv-lcv-9-part.csv  forward_mrv_lcv_summary.xlsx  ~$forward_mrv_lcv_summary.xlsx
include/: base.h  serialization.h  utils.h
include/engine/: SudokuSolver.h  board.h  solver.h
include/heuristic/: backtrack.h  forward.h  heuristic.h  sbacktrack.h  sforward.h
src/: main.cpp  serialization.cpp  wasm.cpp
src/engine/: SudokuSolver.cpp  board.cpp  solver.cpp
src/heuristic/: backtrack.cpp  forward.cpp  sbacktrack.cpp  sforward.cpp
web/: README.md  eslint.config.ts  index.html  package-lock.json  package.json  test.html  tsconfig.app.json  vite.config.ts
web/src/: App.vue
(+10 files in other folders)
